- Added wxRICHTEXT_SETSTYLE_REMOVE flag for removing styles, and
  wxRICHTEXT_HITTEST_OUTSIDE for more accurate hit-testing.
- Fixed a crash when writing wxRichTextCtrl styles.
- Fixed tab-related drawing and hit-testing bugs in wxRichTextCtrl.
- Implemented background colour in wxRichTextCtrl.
- Fixed crashes in helpview when opening a file.

wxMSW

- Fix lack of spin control update event when control lost focus.
- Corrected drawing of bitmaps for disabled menu items.

wxMac

- Added support for the wxFRAME_FLOAT_ON_PARENT style.
- Now takes window variants into account when rendering buttons.
- Fix position of the centered windows (didn't take menu bar size into account)

wxX11:

- Don't crash in wxWindow dtor if the window hadn't been really Create()d.
- Update wxChoice value when SetSelection() is called.

wxUniv:

- Fixed wxComboBox always sorted.


2.8.1
-----

All:

- Fix compilation with wxUSE_STL=1.
- wxGrid::GetBestSize() returns same size the grid would have after AutoSize().
- Added wxTreeCtrl::CollapseAll[Children]() and IsEmpty() (Francesco Montorsi).
- Several RTL-related positioning fixes (Diaa Sami).
- Fix wxConfig::DeleteGroup() for arguments with trailing slash (David Hart).
- Fix memory leak in wxGrid::ShowCellEditControl() (Christian Sturmlechner).

wxMSW:

- Fixed compilation with Borland C++ in Unicode mode but without MSLU.
- Show taskbar icon menu on right button release, not press.

wxGTK:

- Don't crash if command line is not valid UTF-8 (Unicode build only).

wxUniv:

- It is now possible to set background colour of wxStaticText.


2.8.0
-----

All:

- Added wxSearchCtrl (Vince Harron).
- wxCSConv("UTF-16/32") now behaves correctly, i.e. same as wxMBConvUTF16/32.
- wxArrayString::Alloc() now works as reserve() and doesn't clear array contents
- Fixed long standing bug in wxFileConfig groups renaming (Antti Koivisto).
- New option wxFS_READ | wxFS_SEEKABLE for wxFileSystem::OpenFile() to return
  a stream that is seekable.